--- a/fsl.ipynb
+++ b/fsl.ipynb
@@ -294,7 +294,7 @@
     {
      "data": {
       "text/plain": [
-       "['lifted_structured_test', 'triplet_br_test']"
+       "['silhouette_margin_01']"
       ]
      },
      "execution_count": 7,
@@ -310,7 +310,7 @@
     "        new_to_list.append(exp_name)\n",
     "\n",
     "to_do_list = new_to_list\n",
-    "to_do_list = ['lifted_structured_test', 'triplet_br_test']\n",
+    "to_do_list = ['silhouette_margin_01']\n",
     "to_do_list"
    ]
   },
@@ -323,13 +323,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----lifted_structured_test-----\n"
+      "-----silhouette_margin_01-----\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "510b5e557b064e178efc836d46b7a0d1",
+       "model_id": "f47e91a2532b4d40a774c8812f70b383",
        "version_major": 2,
        "version_minor": 0
       },
@@ -345,106 +345,45 @@
      "output_type": "stream",
      "text": [
       "seed = 121958:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n",
       "seed = 671155:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n",
       "seed = 131932:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n",
       "seed = 365838:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n",
       "seed = 259178:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n",
       "seed = 644167:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n",
       "seed = 110268:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n",
       "seed = 732180:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n",
       "seed = 54886:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n",
       "seed = 137337:\n",
-      "epochs to test = {198, 199, 40, 105, 185, 60, 190}\n",
-      "Epochs to test: {198, 199, 40, 105, 185, 60, 190}\n",
-      "198 199 40 105 185 60 190 \n",
-      "-----triplet_br_test-----\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06ced98cf1044b5fbce78356550d2389",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "seed = 121958:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n",
-      "seed = 671155:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n",
-      "seed = 131932:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n",
-      "seed = 365838:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n",
-      "seed = 259178:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n",
-      "seed = 644167:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n",
-      "seed = 110268:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n",
-      "seed = 732180:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n",
-      "seed = 54886:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n",
-      "seed = 137337:\n",
-      "epochs to test = {35, 195, 175, 180, 155, 60, 190}\n",
-      "Epochs to test: {35, 195, 175, 180, 155, 60, 190}\n",
-      "35 195 175 180 155 60 190 \n"
+      "epochs to test = {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "Epochs to test: {66, 35, 195, 135, 199, 105, 170, 110}\n",
+      "66 35 195 135 199 105 170 110 \n"
      ]
     }
    ],
